@@ -1,3 +1,7 @@
+2009-08-28  higepon  <higepon@users.sourceforge.jp>
+
+	* FFIProcedures.cpp (struct CallBackTrampoline): Added for FFI callback.
+
 2009-08-26  higepon  <higepon@users.sourceforge.jp>
 
 	* test/list.scm : Passed.	
